src/api/dcps/gapi/include/gapi.h

typedef char                                    gapi_char;
typedef c_char      gapi_char;
/*
 * typedef long ReturnCode_t;
 */
typedef gapi_long gapi_returnCode_t;
typedef gapi_unsigned_long gapi_statusMask;
typedef gapi_object gapi_topicDescription;
typedef gapi_object gapi_dataReader;
typedef gapi_object gapi_subscriber;
typedef struct {
    gapi_unsigned_long _maximum;
    gapi_unsigned_long _length;
    gapi_dataReader *_buffer;
    gapi_boolean _release;
} gapi_dataReaderSeq;
struct gapi_dataReaderListener {
    void *listener_data;
    gapi_listener_RequestedDeadlineMissedListener on_requested_deadline_missed;
    gapi_listener_RequestedIncompatibleQosListener on_requested_incompatible_qos;
    gapi_listener_SampleRejectedListener on_sample_rejected;
    gapi_listener_LivelinessChangedListener on_liveliness_changed;
    gapi_listener_DataAvailableListener on_data_available;
    gapi_listener_SubscriptionMatchedListener on_subscription_match;
    gapi_listener_SampleLostListener on_sample_lost;
};
struct gapi_subscriberListener {
    void *listener_data;
    gapi_listener_RequestedDeadlineMissedListener on_requested_deadline_missed;
    gapi_listener_RequestedIncompatibleQosListener on_requested_incompatible_qos;
    gapi_listener_SampleRejectedListener on_sample_rejected;
    gapi_listener_LivelinessChangedListener on_liveliness_changed;
    gapi_listener_DataAvailableListener on_data_available;
    gapi_listener_SubscriptionMatchedListener on_subscription_match;
    gapi_listener_SampleLostListener on_sample_lost;
    gapi_listener_DataOnReadersListener on_data_on_readers;
};
/* // This is a bit-mask SampleStateKind
 * typedef unsigned long SampleStateMask;
 */
typedef gapi_unsigned_long gapi_sampleStateMask;
/* // This is a bit-mask ViewStateKind
 * typedef unsigned long ViewStateMask;
 */
typedef gapi_unsigned_long gapi_viewStateMask;
/* // This is a bit-mask InstanceStateKind
 * typedef unsigned long InstanceStateMask;
 */
typedef gapi_unsigned_long gapi_instanceStateMask;
/*
 * interface DomainParticipant : Entity {
 */
typedef gapi_object gapi_domainParticipant;
/*     DataReader
 *     create_datareader(
 *         in TopicDescription a_topic,
 *         in DataReaderQos qos,
 *         in DataReaderListener a_listener);
 */
OS_API gapi_dataReader
gapi_subscriber_create_datareader (
    gapi_subscriber _this,
    const gapi_topicDescription a_topic,
    const gapi_dataReaderQos *qos,
    const struct gapi_dataReaderListener *a_listener,
    const gapi_statusMask mask);
/*     ReturnCode_t
 *     delete_datareader(
 *         in DataReader a_datareader);
 */
OS_API gapi_returnCode_t
gapi_subscriber_delete_datareader (
    gapi_subscriber _this,
    const gapi_dataReader a_datareader);
/*     ReturnCode_t
 *     delete_contained_entities();
 */
OS_API gapi_returnCode_t
gapi_subscriber_delete_contained_entities (
    gapi_subscriber _this);
/*     DataReader
 *     lookup_datareader(
 *         in string topic_name);
 */
OS_API gapi_dataReader
gapi_subscriber_lookup_datareader (
    gapi_subscriber _this,
    const gapi_char *topic_name);
/*     ReturnCode_t
 *     get_datareaders(
 *         inout DataReaderSeq readers,
 *         in SampleStateMask sample_states,
 *         in ViewStateMask view_states,
 *         in InstanceStateMask instance_states);
 */
OS_API gapi_returnCode_t
gapi_subscriber_get_datareaders (
    gapi_subscriber _this,
    gapi_dataReaderSeq *readers,
    const gapi_sampleStateMask sample_states,
    const gapi_viewStateMask view_states,
    const gapi_instanceStateMask instance_states);
/*     ReturnCode_t
 *     notify_datareaders();
 */
OS_API gapi_returnCode_t
gapi_subscriber_notify_datareaders (
    gapi_subscriber _this);
/*     ReturnCode_t
 *     set_qos(
 *         in SubscriberQos qos);
 */
OS_API gapi_returnCode_t
gapi_subscriber_set_qos (
    gapi_subscriber _this,
    const gapi_subscriberQos *qos);
/*     ReturnCode_t
 *     get_qos(
 *         inout SubscriberQos qos);
 */
OS_API gapi_returnCode_t
gapi_subscriber_get_qos (
    gapi_subscriber _this,
    gapi_subscriberQos *qos);
/*     ReturnCode_t
 *     set_listener(
 *         in SubscriberListener a_listener,
 *         in StatusKindMask mask);
 */
OS_API gapi_returnCode_t
gapi_subscriber_set_listener (
    gapi_subscriber _this,
    const struct gapi_subscriberListener *a_listener,
    const gapi_statusMask mask);
/*     SubscriberListener
 *     get_listener();
 */
OS_API struct gapi_subscriberListener
gapi_subscriber_get_listener (
    gapi_subscriber _this);
/*     ReturnCode_t
 *     begin_access();
 */
OS_API gapi_returnCode_t
gapi_subscriber_begin_access (
    gapi_subscriber _this);
/*     ReturnCode_t
 *     end_access();
 */
OS_API gapi_returnCode_t
gapi_subscriber_end_access (
    gapi_subscriber _this);
/*     DomainParticipant
 *     get_participant();
 */
OS_API gapi_domainParticipant
gapi_subscriber_get_participant (
    gapi_subscriber _this);
/*     ReturnCode_t
 *     set_default_datareader_qos(
 *         in DataReaderQos qos);
 */
OS_API gapi_returnCode_t
gapi_subscriber_set_default_datareader_qos (
    gapi_subscriber _this,
    const gapi_dataReaderQos *qos);
/*     ReturnCode_t
 *     get_default_datareader_qos(
 *         inout DataReaderQos qos);
 */
OS_API gapi_returnCode_t
gapi_subscriber_get_default_datareader_qos (
    gapi_subscriber _this,
    gapi_dataReaderQos *qos);
/*     ReturnCode_t
 *     copy_from_topic_qos(
 *         inout DataReaderQos a_datareader_qos,
 *         in TopicQos a_topic_qos);
 */
OS_API gapi_returnCode_t
gapi_subscriber_copy_from_topic_qos (
    gapi_subscriber _this,
    gapi_dataReaderQos *a_datareader_qos,
    const gapi_topicQos *a_topic_qos);